<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_tv_fav"
        android:layout_width="120dp"
        android:layout_height="195dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tv_tv_title_fav"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/title_show"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_tv_fav"
        app:layout_constraintTop_toTopOf="@+id/img_tv_fav" />

    <TextView
        android:id="@+id/tv_tv_date_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_tv_fav"
        app:layout_constraintStart_toEndOf="@+id/img_tv_fav" />

    <TextView
        android:id="@+id/tv_tv_rating_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/rating"
        android:textColor="@color/star"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_tv_date_fav"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tv_tv_title_fav"
        app:layout_constraintVertical_bias="0.494" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tv_rating_fav"
        app:layout_constraintStart_toEndOf="@+id/img_tv_fav"
        app:layout_constraintTop_toTopOf="@+id/tv_tv_rating_fav"
        app:srcCompat="@drawable/ic_baseline_star_rate_24"
        tools:ignore="ContentDescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>